fix overflow problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,7 +129,7 @@ pre, code {
 }
 
 pre {
-	
+  overflow-x: scroll;
 }
 
 code {
